@@ -62,7 +62,8 @@
 		<option id="LastSvnCheck" type="float" default="0"/>
 	</options>
 	
-	<event type="gameUpdate" module="BugUtil" function="doDeferredCalls"/> 
+	<event type="gameUpdate" module="BugUtil" function="doDeferredCalls"/>
+	<event type="BeginPlayerTurn" module="BugUtil" function="doHotSeatCheck"/>
 	
 	<init module="BugUtil" function="readLoggingOptions" immediate="true"/>
     <init module="BugDll" immediate="true"/>
